# IoT-Sensor-Gateway-Embedded-Linux-on-Raspberry-Pi-4

./: README.md
conf/: layer.conf
files/: CMakeLists.txt  bme280.c  bme280.h  config.h  iot-gateway.cfg  mcp3008.c  mcp3008.h  mqtt_client.c  mqtt_client.h  sensor-gateway-overlay.dts  sensor-gateway.conf  sensor-gateway.service  sensor_gateway.c
recipes-app/sensor-gateway/: sensor-gateway_1.0.bb
recipes-core/images/: iot-gateway-image.bb
recipes-kernel/linux-raspberrypi/: linux-raspberrypi_%.bbappend
